tests/baselines/reference/computedPropertyNames34_ES5.errors.txt
computedPropertyNames34_ES5.ts(5,18): error TS2302: Static members cannot reference class type parameters.


==== computedPropertyNames34_ES5.ts (1 errors) ====
    function foo<T>() { return '' }
    class C<T> {
        static bar() {
            var obj = {
                [foo<T>()]() { }
                     ~
!!! error TS2302: Static members cannot reference class type parameters.
            };
            return 0;
        }
    }